fix spacing in menu 2

--- a/sass/custom/_page.scss
+++ b/sass/custom/_page.scss
@@ -42,7 +42,7 @@ body{
 	margin: -10px 0 30px -15px;
 
 	li{
-		margin-right: 30px;
+		margin-right: 25px;
 		text-transform: uppercase;
 	}
 }
